# proms-mcp

./: .gitignore  AUTH_SPECS.md  Dockerfile  FASTMCP_AUTH.md  GEMINI.md  LLM.md  Makefile  README.md  SPECS.md  TESTING.md  TOKENREVIEW_IMPLEMENTATION_PLAN.md  claude-proposal-fastmcp-auth.md  pyproject.toml  renovate.json  test_datasources.yaml
.cursor/: mcp-examples.json  mcp.json
.gemini/: settings-examples.json
.tekton/: proms-mcp-main-pull-request.yaml  proms-mcp-main-push.yaml
local_config/: datasources-example.yaml
openshift/: dashboard.yaml  deploy.yaml  test.yaml
openshift/dashboards/: proms-mcp-dashboard.yaml
promesh_mcp/: __init__.py  __main__.py  client.py  config.py  logging.py  server.py
proms_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  logging.py  monitoring.py  server.py
proms_mcp/auth/: __init__.py  backends.py  cache.py  fastmcp_auth.py  middleware.py  models.py  openshift.py  tokenreview_auth.py
tests/: test_auth.py  test_client.py  test_config.py  test_main.py  test_monitoring.py  test_server.py  test_server_fastmcp.py
tests/auth/: test_auth_config.py  test_auth_scenarios.py  test_backends.py  test_cache.py  test_middleware.py  test_models.py  test_openshift.py  test_tokenreview_auth.py
